fix: fix scrollbars and add fixed height to code blocks
closes #1065

--- a/assets/_custom.scss
+++ b/assets/_custom.scss
@@ -11,6 +11,7 @@
 @import "plugins/toc";
 @import "katex";
 @import "icons";
+@import "code";
 
 .markdown {
     overflow-x: hidden;
@@ -153,18 +154,16 @@ blockquote {
 }
 .book-menu nav {
     width: 20rem;
-    padding: 1rem 0.2rem 4rem 1rem;
+    height: 100%;
+    padding: 1rem 0.2rem 1rem 1rem;
     position: fixed;
     top: 0;
     bottom: 0;
-    overflow-x: initial;
-    overflow-y: hidden;
+    overflow: hidden;
 }
-
-.book-menu nav .toc {
-    overflow-x: hidden;
-    overflow-y: auto;
+.book-menu .toc {
     height: 100%;
+    overflow: hidden;
 }
 
 .markdown>h1:first-of-type {
